workloads/eks-example-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-example
  namespace: eks-example
  labels:
    app: eks-example
  annotations:
    # Container Image Automated Updates
    flux.weave.works/automated: "true"
    # do not apply this manifest on the cluster
    #flux.weave.works/ignore: "true"

spec:
  replica: 1
  selector:
    matchlabels:
      app: eks-example
  template:
    metadata:
      labels:
        app: eks-example
    spec:
      container:
      - name: eks-example
        image: 295509279117.dkr.ecr.us-west-2.amazonaws.com/eks-example:1be6e0cb
        imagePullPolicy: IfNotPresent
        ports:
        - conatinerPort: 80
          protocol: TCP
          name: http
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
