workloads/eks-example-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    # The redirect annotation rule must be first match rule(which will be evaluated first by ALB)
    # Refer: https://kubernetes-sigs.github.io/aws-alb-ingress-controller/guide/tasks/ssl_redirect/
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":{ "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'

    # annotation must be set to allow listen for HTTPS traffic
    # if the certificate-arn annotation is not specified, the controller will attampt ot add certificate to listners that require it by matching available certs from ACM with the Host field in each listener's ingress rule
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:295509279117:certificate/3f3f556a-ee51-4a8e-a554-17466e93c94f

    alb.ingress.kubernetes.io/scheme: internet-facing
    
    kubernetes.io/ingress.class: alb

  labels:
    app: eks-example
  name: ingress
  namespace: eks-example

spec:
  rules:
  - host: "hahaha.letsbld.com"
    http:
      paths:
      - backend:
          serviceName: ssl-redirect
          servicePort: use-annotation
        path: /*
      - backend:
          serviceName: eks-example
          servicePort: 80
        path: /*
